# SyncOrSink

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_log.txt  package-lock.json  package.json  techstack_en.md
.cache/clangd/index/: Game.cpp.35DBC5C374014DA8.idx  Game.h.FDFD15295148C8C4.idx  NetworkManager.cpp.5998BD781B97C0C4.idx  NetworkManager.h.89CD030208422082.idx  Player.cpp.C6B41456BF80487E.idx  Player.h.24B337DBC31165B9.idx  SignalingClient.cpp.95F0436ABE7F2802.idx  SignalingClient.h.F5730B12586D4893.idx  main.cpp.5DF54FF8A7BD2322.idx
src/: main.cpp
src/app/: layout.tsx  page.tsx
src/components/: GameCanvas.tsx  GameSettings.tsx  Lobby.tsx
src/components/lobby/: GameSetup.tsx  PlayerList.tsx
src/context/: PeerContext.tsx
src/game/: Game.cpp  Game.h  Player.cpp  Player.h
src/game/ai/: AlarmSystem.ts  DetectionSystem.ts  EnemyAI.ts
src/game/ai/behaviors/: ChaseBehavior.ts  InvestigateBehavior.ts  PatrolBehavior.ts
src/game/classes/: Door.ts  Enemy.ts  Player.ts
src/game/core/: Camera.ts  GameConfig.ts  GameEngine.ts  GameInitializer.ts
src/game/rendering/: BackgroundRenderer.ts  GridRenderer.ts
src/game/systems/: AssetLoader.ts  CollisionSystem.ts  InputHandler.ts  PlayerMovement.ts
src/net/: NetworkManager.cpp  NetworkManager.h  SignalingClient.cpp  SignalingClient.h
src/store/: store.ts
